--- a/src/assets/locales/zh-cn.json
+++ b/src/assets/locales/zh-cn.json
@@ -5,5 +5,14 @@
     "Visit":"点击主页",
     "create":"创建组织",
     "create_content":"使用阿拉贡创建您的组织",
-    "open":"打开组织"
+    "open":"打开组织",
+    "connect":"连接以太坊钱包",
+    "connect_content":"先连接以太坊钱包，再创建组织",
+    "what_is_eth":"以太坊钱包是什么?",
+    "select_template":"选择模板",
+    "select_template_content":"通过预定义的模板来创建您的组织",
+    "claim_name":"取名",
+    "configure_template":"配置模板",
+    "review_information":"检查",
+    "launch_organization":"启动组织"
 }
