--- a/src/assets/locales/en-us.json
+++ b/src/assets/locales/en-us.json
@@ -16,5 +16,26 @@
     "review_information":"Configure template",
     "launch_organization":"Launch organization",
     "dandelion_name":"Dandelion",
-    "dandelion_content":"Facilitate collaboration with an organization that makes it easy for contributors to simply part ways when disagreements occur."
+    "dandelion_content":"Facilitate collaboration with an organization that makes it easy for contributors to simply part ways when disagreements occur.",
+    "company_name":"Company",
+    "company_content":"Use transferable tokens to represent ownership stake in your organization. Decisions are made based on stake-weighted voting.",
+    "fundraising_name":"Fundraising",
+    "fundraising_content":"Launch a transparent and accountable crowdfunding campaign for your organization.",
+    "open_enterprise_name":"Open Enterprise",
+    "open_enterprise_content":"A suite of apps for organizations, including project management, bounties, budget planning and rewards.",
+    "membership_name":"Membership",
+    "membership_content":"Use a non-transferable token to represent membership. Decisions are made based on one-member-one-vote governance.",
+    "reputation_name":"Reputation",
+    "reputation_content":"Use non-transferable tokens to represent reputation. Decisions are made using reputation-weighted voting.",
+    "claim_domain_name":"Claim a name",
+    "claim_domain_label":"Organization’s name",
+    "claim_domain_remark":"Aragon uses the Ethereum Name Service (ENS) to assign names to organizations. The name you choose will be mapped to your organization’s Ethereum address and cannot be changed after you launch your organization.",
+    "configure_template_label":"Choose your Voting app settings below.",
+    "configure_template_support_content":"Support is the relative percentage of tokens that are required to vote “Yes” for a proposal to be approved. For example, if “Support” is set to 50%, then more than 50% of the tokens used to vote on a proposal must vote “Yes” for it to pass.",
+    "configure_template_minimum_approval_content":"Minimum Approval is the percentage of the total token supply that is required to vote “Yes” on a proposal before it can be approved. For example, if the “Minimum Approval” is set to 20%, then more than 20% of the outstanding token supply must vote “Yes” on a proposal for it to pass.",
+    "configure_template_vote_duration_content":"Vote Duration is the length of time that the vote will be open for participation. For example, if the Vote Duration is set to 24 hours, then tokenholders have 24 hours to participate in the vote.",
+    "configure_template_vote_buffer_content":"Vote Buffer is the minimum amount of time separating the start time of each new vote, as votes are processed in the sequence they were created.",
+    "configure_template_vote_delay_content":"Vote Delay is the period of time an approved vote must wait before being executed.",
+    "configure_template_remark":"The support and minimum approval thresholds are strict requirements, such that votes will only pass if they achieve approval percentages greater than these thresholds.",
+    "token_screen_remark":"These settings will determine the name and symbol of the token that will be created for your organization. Add members to define the initial distribution of this token."
 }
